# fmsnowcover

./: Makefile.in  README.md  configure  configure.ac
etc/: cfgfile_fmsnowcover.txt  coeffs.txt  coeffs_070809  conf-laika.cfg  conf-local-steingod.cfg  conf-local.cfg  lmask_atl.hdf5  lmask_grl.hdf5  lmask_nrw.hdf5  lmask_nse.hdf5  physiography.dnnr.hdf5  physiography.dnns.hdf5  satslist_cryorisk  statcoeffs_4surfs.txt  statcoeffs_5surfs.txt  testtable_4surfs.txt  tilelist_cryorisk
scr/: process-snow
src/: Makefile.in  accusnow.c  accusnow.h  accusnow.make  cmaskname.c  fmaccusnow.c  fmaccusnow.h  fmaccusnowfuncs.c  fmsnowcover.c  fmsnowcover.h  func_accusnow.c  gammapdf.c  gammapdf3par.c  getnwp.c  getnwp.h  normalpdf.c  pix_proc.c  probest.c  store_mitiff_product.c  store_snow.c
